--- a/TechStore.Api/Properties/launchSettings.json
+++ b/TechStore.Api/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
@@ -19,10 +19,16 @@
     },
     "TechStore.Api": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "NoBrowser": {
+      "commandName": "Project",
+      "applicationUrl": "https://localhost:57382;http://localhost:46885",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
