--- a/TechStore.Models/TechStore.Models.csproj
+++ b/TechStore.Models/TechStore.Models.csproj
@@ -8,4 +8,7 @@
     <Folder Include="Models\" />
     <Folder Include="Types\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
 </Project>
