--- a/TechStore.Test/TechStore.Test.csproj
+++ b/TechStore.Test/TechStore.Test.csproj
@@ -11,9 +11,15 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TechStore.Api\TechStore.Api.csproj" />
+    <ProjectReference Include="..\TechStore.Models\TechStore.Models.csproj" />
   </ItemGroup>
 </Project>
