--- a/TechStore.Api/TechStore.Api.csproj
+++ b/TechStore.Api/TechStore.Api.csproj
@@ -7,6 +7,8 @@
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'NoBrowser' " />
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
+    <PackageReference Include="MySql.Data" Version="8.0.24" />
+    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.22" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
